print() now prints content of strings